--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://www.iconpacks.net/icons/2/free-twitter-logo-icon-2429-thumb.png">
+    <link rel="icon" href="https://raw.githubusercontent.com/novda/temp/main/hse_hci_icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="hse thesis work"
