--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://raw.githubusercontent.com/novda/temp/main/hse_hci_icon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="hse thesis work"
-      content="hse thesis work"
-    />
-    <title>HSE Posts RecSys</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="https://raw.githubusercontent.com/novda/temp/main/hse_hci_icon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="hse thesis work" content="hse thesis work" />
+        <title>HSE Posts RecSys</title>
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript">
+            ;(function (m, e, t, r, i, k, a) {
+                m[i] =
+                    m[i] ||
+                    function () {
+                        ;(m[i].a = m[i].a || []).push(arguments)
+                    }
+                m[i].l = 1 * new Date()
+                ;(k = e.createElement(t)),
+                    (a = e.getElementsByTagName(t)[0]),
+                    (k.async = 1),
+                    (k.src = r),
+                    a.parentNode.insertBefore(k, a)
+            })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym')
+
+            ym(88781607, 'init', {
+                clickmap: true,
+                trackLinks: true,
+                accurateTrackBounce: true,
+                webvisor: true,
+            })
+        </script>
+        <noscript
+            ><div>
+                <img src="https://mc.yandex.ru/watch/88781607" style="position: absolute; left: -9999px" alt="" /></div
+        ></noscript>
+        <!-- /Yandex.Metrika counter -->
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
